title added to html.  Testing github on Atom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="resources/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/styles.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title></title>
+    <title>WWE Superstars I Love</title>
   </head>
   <body>
     <h1>css test</h1>
